Red_Belt/Week 5/.metadata/.plugins/org.eclipse.cdt.ui/ConcurentMap.build.log
19:57:38 **** Incremental Build of configuration Debug for project ConcurentMap ****
Info: Internal Builder is used for build
g++ -std=c++2a -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\ConcurentMap.o" "..\\src\\ConcurentMap.cpp" 
..\src\ConcurentMap.cpp: In instantiation of 'ConcurrentMap<K, V>::Access ConcurrentMap<K, V>::operator[](const K&) [with K = int; V = int]':
..\src\ConcurentMap.cpp:62:15:   required from here
..\src\ConcurentMap.cpp:35:83: error: could not convert '{std::lock_guard<std::mutex>((* &((ConcurrentMap<int, int>*)this)->ConcurrentMap<int, int>::mutexes.std::vector<std::mutex>::operator[]((((std::vector<std::mutex>::size_type)((int)key)) % ((ConcurrentMap<int, int>*)this)->ConcurrentMap<int, int>::mutexes.std::vector<std::mutex>::size())))), ((ConcurrentMap<int, int>*)this)->ConcurrentMap<int, int>::maps.std::vector<std::map<int, int, std::less<int>, std::allocator<std::pair<const int, int> > >, std::allocator<std::map<int, int, std::less<int>, std::allocator<std::pair<const int, int> > > > >::operator[]((((std::vector<std::map<int, int, std::less<int>, std::allocator<std::pair<const int, int> > >, std::allocator<std::map<int, int, std::less<int>, std::allocator<std::pair<const int, int> > > > >::size_type)((int)key)) % ((ConcurrentMap<int, int>*)this)->ConcurrentMap<int, int>::maps.std::vector<std::map<int, int, std::less<int>, std::allocator<std::pair<const int, int> > >, std::allocator<std::map<int, int, std::less<int>, std::allocator<std::pair<const int, int> > > > >::size())), key}' from '<brace-enclosed initializer list>' to 'ConcurrentMap<int, int>::Access'
   35 |    return {lock_guard(mutexes[key % mutexes.size()]), maps[key % maps.size()], key};
      |                                                                                   ^
      |                                                                                   |
      |                                                                                   <brace-enclosed initializer list>
..\src\ConcurentMap.cpp: In instantiation of 'ConcurrentMap<K, V>::Access ConcurrentMap<K, V>::operator[](const K&) [with K = long long unsigned int; V = std::__cxx11::basic_string<char>]':
..\src\ConcurentMap.cpp:92:11:   required from here
..\src\ConcurentMap.cpp:35:83: error: could not convert '{std::lock_guard<std::mutex>((* &((ConcurrentMap<long long unsigned int, std::__cxx11::basic_string<char> >*)this)->ConcurrentMap<long long unsigned int, std::__cxx11::basic_string<char> >::mutexes.std::vector<std::mutex>::operator[]((((long long unsigned int)key) % ((ConcurrentMap<long long unsigned int, std::__cxx11::basic_string<char> >*)this)->ConcurrentMap<long long unsigned int, std::__cxx11::basic_string<char> >::mutexes.std::vector<std::mutex>::size())))), ((ConcurrentMap<long long unsigned int, std::__cxx11::basic_string<char> >*)this)->ConcurrentMap<long long unsigned int, std::__cxx11::basic_string<char> >::maps.std::vector<std::map<long long unsigned int, std::__cxx11::basic_string<char>, std::less<long long unsigned int>, std::allocator<std::pair<const long long unsigned int, std::__cxx11::basic_string<char> > > >, std::allocator<std::map<long long unsigned int, std::__cxx11::basic_string<char>, std::less<long long unsigned int>, std::allocator<std::pair<const long long unsigned int, std::__cxx11::basic_string<char> > > > > >::operator[]((((long long unsigned int)key) % ((ConcurrentMap<long long unsigned int, std::__cxx11::basic_string<char> >*)this)->ConcurrentMap<long long unsigned int, std::__cxx11::basic_string<char> >::maps.std::vector<std::map<long long unsigned int, std::__cxx11::basic_string<char>, std::less<long long unsigned int>, std::allocator<std::pair<const long long unsigned int, std::__cxx11::basic_string<char> > > >, std::allocator<std::map<long long unsigned int, std::__cxx11::basic_string<char>, std::less<long long unsigned int>, std::allocator<std::pair<const long long unsigned int, std::__cxx11::basic_string<char> > > > > >::size())), key}' from '<brace-enclosed initializer list>' to 'ConcurrentMap<long long unsigned int, std::__cxx11::basic_string<char> >::Access'

19:57:40 Build Finished. 0 errors, 0 warnings. (took 1s.691ms)

